force-app/main/default/objects/NEILON__File_Export_Configuration__c/NEILON__File_Export_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration for file export from Saleforce to Amazon S3.</description>
    <label>File Export Configuration</label>
</CustomObject>