force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Auto_Export_Salesforce_Notes__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Auto_Export_Salesforce_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, S3-Link files will automatically be created for new Salesforce notes.</description>
    <inlineHelpText>If checked, S3-Link files will automatically be created for new Salesforce notes.</inlineHelpText>
    <label>Auto Export Salesforce Notes</label>
    <type>Checkbox</type>
</CustomField>