force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Auto_Move_Case_Email_Attachments__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Auto_Move_Case_Email_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, case email attachments will be moved to Amazon S3 only when case will be closed. Reopen of that case will import S3 files back to Salesforce.</description>
    <inlineHelpText>If checked, case email attachments will be moved to Amazon S3 only when case will be closed. Reopen of that case will import S3 files back to Salesforce.</inlineHelpText>
    <label>Export Closed Cases Email Attachments</label>
    <type>Checkbox</type>
</CustomField>