force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Create_S3_Link_File_Migration_Logs__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Create_S3_Link_File_Migration_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, S3-Link File Migration Logs will be created for Salesforce files which are not migrated.</description>
    <inlineHelpText>If checked, S3-Link File Migration Logs will be created for Salesforce files which are not migrated.</inlineHelpText>
    <label>Create S3-Link File Migration Logs</label>
    <type>Checkbox</type>
</CustomField>