force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Create_S3_Link_Files_for_Attachments__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Create_S3_Link_Files_for_Attachments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, S3-Link file will be created for Salesforce attachments and files.</description>
    <inlineHelpText>If checked, S3-Link file will be created for Salesforce attachments and files.</inlineHelpText>
    <label>Create S3-Link File for Salesforce File</label>
    <type>Checkbox</type>
</CustomField>