force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Delete_Salesforce_Attachment__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Delete_Salesforce_Attachment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, Salesforce attachments and files will be deleted once they are moved to Amazon S3.</description>
    <inlineHelpText>If checked, Salesforce attachments and files will be deleted once they are moved to Amazon S3.</inlineHelpText>
    <label>Delete Salesforce Attachments &amp; Files?</label>
    <type>Checkbox</type>
</CustomField>