force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Export_Inline_Email_Attachments__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Export_Inline_Email_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, S3-Link files will automatically be created for new inline email attachments.</description>
    <inlineHelpText>If checked, S3-Link files will automatically be created for new inline email attachments.</inlineHelpText>
    <label>Export Inline Email Attachments</label>
    <type>Checkbox</type>
</CustomField>