force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Folder_to_Export_Event_Log_Files__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Folder_to_Export_Event_Log_Files__c</fullName>
    <description>S3 Link Folder Id where all event log files will be exported.</description>
    <inlineHelpText>S3 Link Folder Id where all event log files will be exported.</inlineHelpText>
    <label>Where to Export Event Log Files?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>