force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Inbound_Email_Attachment_Container__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Inbound_Email_Attachment_Container__c</fullName>
    <description>Id of Metrics which is container of Inbound Email Attachments.</description>
    <inlineHelpText>Id of Metrics which is container of Inbound Email Attachments.</inlineHelpText>
    <label>Inbound Email Attachment Container</label>
    <length>255</length>
    <type>Text</type>
</CustomField>