force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Remove_Files_from_Recycle_Bin__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Remove_Files_from_Recycle_Bin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Salesforce attachments and files will be removed from Recycle Bin once they are moved to Amazon S3.</description>
    <inlineHelpText>If checked, Salesforce attachments and files will be removed from Recycle Bin once they are moved to Amazon S3.</inlineHelpText>
    <label>Remove Files from Recycle Bin</label>
    <type>Checkbox</type>
</CustomField>