force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Salesforce_Document_Folder_to_Export__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_Document_Folder_to_Export__c</fullName>
    <description>Standard Salesforce Document folder, whose files needs to be exported in Amazon S3.</description>
    <inlineHelpText>Standard Salesforce Document folder, whose files needs to be exported in Amazon S3.</inlineHelpText>
    <label>Salesforce Document Folder to Export</label>
    <length>255</length>
    <type>Text</type>
</CustomField>