force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Salesforce_File_Fields_for_AWS_Metadata__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_File_Fields_for_AWS_Metadata__c</fullName>
    <description>List of Content Version field API names separated by &quot;;&quot; whose values needs to be stored as AWS Metadata</description>
    <inlineHelpText>List of Content Version field API names separated by &quot;;&quot; whose values needs to be stored as AWS Metadata</inlineHelpText>
    <label>Content Version Fields for AWS Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>