force-app/main/default/objects/NEILON__File_Export_Configuration__c/fields/NEILON__Use_Dash_as_File_Number_Separator__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Use_Dash_as_File_Number_Separator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a dash will be used as the file name and number separator. i.e if file.pdf already exist new file name will be file-1.pdf.</description>
    <inlineHelpText>If checked, a dash will be used as the file name and number separator. i.e if file.pdf already exist new file name will be file-1.pdf.</inlineHelpText>
    <label>Use Dash as File Number Separator</label>
    <type>Checkbox</type>
</CustomField>